--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@plugin 'daisyui';
+
 body {
     font-family: "Roboto", serif;
     background-color: #fff;
